# virtual-buddy

./: .gitignore  Progress.md  README.md  virtual_buddy_complete_plan.md
py-project/: .gitignore  bridge.py  requirements.txt  run_simulation.py
py-project/alert/: rules.py
py-project/data/: HUPA0001P.csv
py-project/deprecated/: main_simglucose.py
py-project/meal_model/: config.py  prediction_mock_dynamic.py  predictor.py  train.py
py-project/prediction/: main_simglucose.py  simglucose_result.csv
py-project/prediction/anlysis/: figure.py  figure_1.py  figure_html.py  test.py
py-project/prediction/prediction_mock/: Prediction_Mock_1.ipynb  meal_generator.py  meal_history.csv  prediction_mock.py  prediction_mock_dynamic.ipynb  prediction_mock_dynamic.py  test.py
py-project/prediction/prediction_real/: prediction_real.py
py-project/prediction/results/2026-03-25_21-29-22/: CVGA_stats.csv  adult#001.csv  performance_stats.csv  risk_trace.csv
py-project/simulation/: engine.py  state.py
rust-backend/: .gitignore  Cargo.toml  test_ws.py
rust-backend/src/: main.rs  models.rs  python.rs  routes_rest.rs  routes_ws.rs  state.rs
